--- a/package.json
+++ b/package.json
@@ -4,30 +4,48 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
+    "dev": "next dev --turbo",
+    "format": "prettier --write .",
+    "lint": "eslint --fix .",
     "start": "next start"
   },
   "dependencies": {
+    "@base-ui-components/react": "1.0.0-alpha.7",
+    "@content-collections/core": "^0.8.2",
+    "@content-collections/mdx": "^0.2.2",
+    "@content-collections/next": "^0.2.6",
+    "@fumadocs/content-collections": "1.1.8",
+    "@icons-pack/react-simple-icons": "^12.4.0",
+    "clsx": "^2.1.1",
+    "fumadocs-core": "15.2.3",
+    "lucide-react": "^0.485.0",
+    "motion": "^12.6.3",
     "next": "15.2.4",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "fumadocs-ui": "15.2.3",
-    "fumadocs-core": "15.2.3",
-    "@content-collections/mdx": "^0.2.2",
-    "@content-collections/core": "^0.8.2",
-    "@content-collections/next": "^0.2.6",
-    "@fumadocs/content-collections": "1.1.8"
+    "scroll-into-view-if-needed": "^3.1.0",
+    "tailwind-merge": "^3.1.0",
+    "tailwind-variants": "^1.0.0"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
+    "@tailwindcss/postcss": "^4.1.1",
+    "@tanstack/eslint-config": "^0.1.0",
+    "@types/mdx": "^2.0.13",
     "@types/node": "22.14.0",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
-    "typescript": "^5.8.2",
-    "@types/mdx": "^2.0.13",
-    "@tailwindcss/postcss": "^4.1.1",
-    "tailwindcss": "^4.1.1",
+    "eslint": "^9.23.0",
+    "eslint-config-next": "15.2.4",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.6",
     "postcss": "^8.5.3",
-    "eslint": "^8",
-    "eslint-config-next": "15.2.4"
+    "prettier": "^3.5.3",
+    "prettier-plugin-packagejson": "^2.5.10",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4.1.1",
+    "typescript": "^5.8.2",
+    "zod": "^3.24.2"
   }
 }
